Kubernetes-Manifests-file copy/Backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: three-tier
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 3500
      targetPort: 3000
      protocol: TCP
